services/management/github-runners/controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-system
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
