services/management/github-runners/scale-set.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-runners
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
